Moved to src folder.
Java deprecations in JDK15 corrected.